tests/baselines/reference/jsxFactoryIdentifierWithAbsentParameter.errors.txt
test.tsx(1,9): error TS1547: The 'module' keyword is not allowed for namespace declarations. Use the 'namespace' keyword instead.
test.tsx(9,17): error TS2552: Cannot find name 'createElement'. Did you mean 'frameElement'?


==== test.tsx (2 errors) ====
    declare module JSX {
            ~~~~~~
!!! error TS1547: The 'module' keyword is not allowed for namespace declarations. Use the 'namespace' keyword instead.
        interface IntrinsicElements {
            [s: string]: any;
        }
    }
    
    export class AppComponent {
        render() {
            return <div />;
                    ~~~
!!! error TS2552: Cannot find name 'createElement'. Did you mean 'frameElement'?
!!! related TS2728 lib.dom.d.ts:--:--: 'frameElement' is declared here.
        }
    }
    